add  dark theme

--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,21 @@
   .swiper-slide div {
     object-fit: cover;
   }
+
+
+  :root {
+    --background-color: #ffffff;
+    --foreground-color: #3c3cff;
+    --primary-text-color: #aaaaaa;
+    --secondary-text-color: #ffffff;
+    --toggle-bg: #fde9d9;
+    --toggle-fg: #ffd8e9;
+}
+[data-theme="dark"] {
+    --background-color: #aaaaaa;
+    --foreground-color: #567aff;
+    --primary-text-color: #ffffff;
+    --secondary-text-color: #aaaaaa;
+    --toggle-bg: #283452;
+    --toggle-fg: #aaafff;
+}
